--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="/css/style.css" media="all" rel="stylesheet" type="text/css"/>  
 	<script language="javascript" src="javascripts/util.js" type="text/javascript"></script>
 	<script language="javascript" src="javascripts/sprite.js" type="text/javascript"></script>
-	<script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
+  <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
+  <script language="javascript" src="scripts/jquery.min.js" type="text/javascript"></script>
   </head>
   <body>
     <div>Hello World</div>
