--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script language="javascript" src="javascripts/sprite.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/jquery.min.js" type="text/javascript"></script>
+  <script language="javascript" src="scripts/canvas.js" type="text/javascript"></script>
   </head>
   <body>
     <div>Hello World</div>
