--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Space Demo</title>
     <link href="/css/style.css" media="all" rel="stylesheet" type="text/css"/>  
-	<script language="javascript" src="javascripts/util.js" type="text/javascript"></script>
-	<script language="javascript" src="javascripts/sprite.js" type="text/javascript"></script>
+	<script language="javascript" src="scripts/util.js" type="text/javascript"></script>
+	<script language="javascript" src="scripts/sprite.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
-  <script language="javascript" src="scripts/jquery.min.js" type="text/javascript"></script>
+  <script language="javascript" src="scripts/jquery.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/canvas.js" type="text/javascript"></script>
   </head>
   <body>
