--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script language="javascript" src="scripts/util.js" type="text/javascript"></script>
 	<script language="javascript" src="scripts/sprite.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
-  <script language="javascript" src="scripts/jquery.js" type="text/javascript"></script>
+  <script language="javascript" src="scripts/jQuery.js" type="text/javascript"></script>
   <script language="javascript" src="scripts/canvas.js" type="text/javascript"></script>
   </head>
   <body>
