--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>Space Demo</title>
-    <link href="/css/style.css" media="all" rel="stylesheet" type="text/css"/>  
-	<script language="javascript" src="scripts/util.js" type="text/javascript"></script>
-	<script language="javascript" src="scripts/sprite.js" type="text/javascript"></script>
-  <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
-  <script language="javascript" src="scripts/jQuery.js" type="text/javascript"></script>
-  <script language="javascript" src="scripts/canvas.js" type="text/javascript"></script>
+    <title>Space Attack</title>
+    <canvas id = "canvas_container" width = "500" height = "500"></canvas>
+    <script language="javascript" src="scripts/jQuery.js" type="text/javascript"></script>
+    <script language="javascript" src="scripts/sprite.js" type="text/javascript"></script>
+    <script language="javascript" src="scripts/sound.js" type="text/javascript"></script>
+    
+    <link href="/css/style.css" media="all" rel="stylesheet" type="text/css"/> 
+
   </head>
+
   <body>
-    <div>Hello World</div>
+    <script language="javascript" src="scripts/canvas.js" type="text/javascript"></script>
   </body>
+  
 </html>
